samples/_failures_safe/1761254979_66a0cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a30482d1.c: In function ‘main’:
./samples/SAFE/__tmp_a30482d1.c:160:1: error: expected declaration or statement at end of input
  160 | int main(void) {
      | ^~~
